// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal header it matches snapshot with no props 1`] = `
<ModalHeader>
  <div
    className="header-0-2-1"
  >
    Header
  </div>
</ModalHeader>
`;

exports[`Modal header it matches snapshot with props 1`] = `
<ModalHeader
  className="className"
  style={
    Object {
      "display": "inline",
    }
  }
>
  <div
    className="header-0-2-2 className"
    style={
      Object {
        "display": "inline",
      }
    }
  >
    Header
  </div>
</ModalHeader>
`;
